# wl-screenrec

./: .gitignore  Cargo.toml  README.md  all-local.code-workspace  build.rs  compatible-compositors.nu
.github/scripts/: run_tests.sh  sway.cfg
.github/workflows/: publish_crates.yml  rust.yml
src/: audio.rs  avhw.rs  cap_ext_image_copy.rs  cap_wlr_screencopy.rs  fifo.rs  filter.rs  fps_limit.rs  main.rs  transform.rs
tests/: cmdline.rs
