[package]
name = "wl-screenrec"
description = "High performance screen/audio recorder for wlroots"
license-file = "LICENSE"
homepage = "https://github.com/russelltg/wl-screenrec"
repository = "https://github.com/russelltg/wl-screenrec"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", default-features = false, features = [
    "std",
    "derive",
    "help",
    "color",
    "usage",
    "error-context",
    "suggestions",
] }
wayland-client = { version = "0.31", features = ["log"] }
wayland-backend = { version = "0.3.3", features = ["log"] }
wayland-protocols = { version = "0.31", features = [
    "client",
    "unstable",
    "staging",
] }
wayland-protocols-wlr = { version = "0.2", features = ["client"] }

# ffmpeg-next does not support ffmpeg 6.1 yet, so grab from the 6.1 PR
ffmpeg-next = "6.1"
thiserror = "1.0.38"
drm-fourcc = "2.2.0"
human-size = "0.4.2"
signal-hook = "0.3.15"
anyhow = "1.0.71"
libc = "0.2.147"
simplelog = "0.12.1"
log = "0.4.21"


[dev-dependencies]
nix = { version = "0.28.0", default-features = false, features = [
    "signal",
    "process",
] }
serde_json = "1.0.103"

[profile.release]
lto = "thin"
