[package]
name = "wl-screenrec"
description = "High performance screen/audio recorder for wlroots"
license-file = "LICENSE"
homepage = "https://github.com/russelltg/wl-screenrec"
repository = "https://github.com/russelltg/wl-screenrec"
version = "0.1.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", default-features = false, features = [
    "std",
    "derive",
    "help",
    "color",
    "usage",
    "error-context",
    "suggestions",
] }
wayland-client = { version = "0.31", features = ["log"] }
wayland-backend = { version = "0.3.3", features = ["log"] }
wayland-protocols = { version = "0.32", features = [
    "client",
    "unstable",
    "staging",
] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
ffmpeg-next = "7.0.1"
ffmpeg-sys-next = "7.0.0" # need direct dep on -sys to get metadata to consume in build.rs
thiserror = "2.0.3"
human-size = "0.4.2"
signal-hook = "0.3.15"
anyhow = "1.0.71"
libc = "0.2.147"
simplelog = "0.12.1"
log = "0.4.21"
clap_complete = "4.5.8"
log-once = "0.4.1"
drm = "0.14.0"
ash = { version = "0.38.0", optional = true }

[patch.crates-io]
# Waiting on https://github.com/zmwangx/rust-ffmpeg-sys/pull/91
ffmpeg-sys-next = { git = "https://github.com/russelltg/rust-ffmpeg-sys", branch = "vulkan" }

# Uncomment for local dev
# ffmpeg-next = { path = "../rust-ffmpeg" }
# ffmpeg-sys-next = { path = "../rust-ffmpeg-sys" }

[dev-dependencies]
nix = { version = "0.30.0", default-features = false, features = [
    "signal",
    "process",
] }
serde_json = "1.0.103"

[features]
experimental-vulkan = [
    "ffmpeg-sys-next/vulkan", 
    "ash"
]


[profile.release]
lto = "thin"
